# clinical-guideline-parser

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HOW_TO_RUN.txt  LICENSE  README.md  purpose.txt  pyproject.toml  requirements.txt  setup_github.sh
.github/workflows/: test.yml
examples/: demo.py
src/cli/: ingest.py  search.py
src/guidelines/: models.py
src/parsers/: __init__.py  html_parser.py  pdf_parser.py
src/search/: __init__.py  bm25_index.py
src/utils/: __init__.py  dates.py  evidence.py
tests/: __init__.py  test_parsers.py
